<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registerFormVM" type="com.bhubaneswar.app.modules.registerform.data.viewmodel.RegisterFormVM"/>
    </data>
    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_1">
        <ImageView android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_72px"
            android:layout_marginTop="@dimen/_100px" android:layout_width="@dimen/_72px"/>
        <TextView android:gravity="top|center"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16px"
            android:layout_width="wrap_content"
            android:text="@string/msg_let_s_get_sta" style="@style/textStylePoppinsbold16"/>
        <TextView android:gravity="top|center"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8px"
            android:layout_width="wrap_content"
            android:text="@string/msg_create_an_new_a" style="@style/textStylePoppinsregular12"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_blue_50_radius_5"
            android:fontFamily="@font/poppins"
            android:gravity="top|start"
            android:hint="@string/lbl_full_name"
            android:id="@+id/etFullName"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16px"
            android:layout_marginStart="@dimen/_16px"
            android:layout_marginTop="@dimen/_28px"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13px"
            android:paddingStart="@dimen/_30px"
            android:paddingTop="@dimen/_13px" android:singleLine="true"
            android:text="@={registerFormVM.registerFormModel.etFullNameValue}"
            android:textColor="@color/bluegray_300"
            android:textColorHint="@color/bluegray_300"
            android:textFontWeight="400" android:textSize="@dimen/_12px" android:textStyle="normal"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_blue_50_radius_5"
            android:fontFamily="@font/poppins"
            android:gravity="top|start"
            android:hint="@string/lbl_your_email"
            android:id="@+id/etYourEmail"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16px"
            android:layout_marginStart="@dimen/_16px"
            android:layout_marginTop="@dimen/_8px"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13px"
            android:paddingStart="@dimen/_30px"
            android:paddingTop="@dimen/_13px" android:singleLine="true"
            android:text="@={registerFormVM.registerFormModel.etYourEmailValue}"
            android:textColor="@color/bluegray_300"
            android:textColorHint="@color/bluegray_300"
            android:textFontWeight="400" android:textSize="@dimen/_12px" android:textStyle="normal"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_blue_50_radius_5"
            android:fontFamily="@font/poppins"
            android:gravity="top|start"
            android:hint="@string/lbl_password"
            android:id="@+id/etPassword"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16px"
            android:layout_marginStart="@dimen/_16px"
            android:layout_marginTop="@dimen/_8px"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13px"
            android:paddingStart="@dimen/_30px"
            android:paddingTop="@dimen/_13px" android:singleLine="true"
            android:text="@={registerFormVM.registerFormModel.etPasswordValue}"
            android:textColor="@color/bluegray_300"
            android:textColorHint="@color/bluegray_300"
            android:textFontWeight="400" android:textSize="@dimen/_12px" android:textStyle="normal"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_blue_50_radius_5"
            android:fontFamily="@font/poppins"
            android:gravity="top|start"
            android:hint="@string/lbl_password_again"
            android:id="@+id/etPasswordAgain"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16px"
            android:layout_marginStart="@dimen/_16px"
            android:layout_marginTop="@dimen/_8px"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13px"
            android:paddingStart="@dimen/_30px"
            android:paddingTop="@dimen/_13px" android:singleLine="true"
            android:text="@={registerFormVM.registerFormModel.etPasswordAgainValue}"
            android:textColor="@color/bluegray_300"
            android:textColorHint="@color/bluegray_300"
            android:textFontWeight="400" android:textSize="@dimen/_12px" android:textStyle="normal"/>
        <androidx.appcompat.widget.AppCompatButton
            android:clickable="true" android:gravity="center"
            android:id="@+id/btnSignUp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16px"
            android:layout_marginStart="@dimen/_16px"
            android:layout_marginTop="@dimen/_20px"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16px"
            android:paddingEnd="@dimen/_30px"
            android:paddingStart="@dimen/_30px"
            android:paddingTop="@dimen/_16px"
            android:text="@string/lbl_sign_up" style="@style/textStylePoppinsbold14"/>
        <TextView android:gravity="top|center"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20px"
            android:layout_width="wrap_content"
            android:text="@string/msg_have_a_account" style="@style/textStylePoppinsbold12_1"/>
    </LinearLayout>
</layout>
