<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="productDetailProduct01Model" type="com.bhubaneswar.app.modules.productdetailproduct01.data.model.ProductDetailProduct01Model"/>
    </data>
    <LinearLayout android:layout_gravity="center_vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
        <ImageView android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_109px"
            android:layout_marginEnd="@dimen/_16px"
            android:layout_marginStart="@dimen/_16px"
            android:layout_marginTop="@dimen/_16px"
            android:layout_width="@dimen/_109px"
            android:scaleType="fitCenter" cornerRadius="@{@dimen/_5px}" imageRes="@{@drawable/_59d05b3141b4f29f3753da2132aedf51e02e684a}"/>
        <TextView android:gravity="top|start"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16px"
            android:layout_marginStart="@dimen/_16px"
            android:layout_marginTop="@dimen/_8px"
            android:layout_width="match_parent"
            android:text="@string/msg_fs_nike_air_m" style="@style/textStylePoppinsbold12_2"/>
        <TextView android:gravity="top|start"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16px"
            android:layout_marginStart="@dimen/_16px"
            android:layout_marginTop="@dimen/_8px"
            android:layout_width="match_parent"
            android:text="@string/lbl_299_43" style="@style/textStylePoppinsbold12"/>
        <LinearLayout android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16px"
            android:layout_marginStart="@dimen/_16px"
            android:layout_marginTop="@dimen/_8px"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStyle">
            <TextView android:gravity="top|start"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_weight="0.39" android:layout_width="0dp"
                android:text="@string/lbl_534_33" style="@style/textStylePoppinsregular10"/>
            <TextView android:gravity="top|start"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8px"
                android:layout_weight="0.61" android:layout_width="0dp"
                android:text="@string/lbl_24_off" style="@style/textStylePoppinsbold10"/>
        </LinearLayout>
    </LinearLayout>
</layout>
